# flowalign

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
src/flowalign/: __init__.py  __main__.py  flowaligner.py  helpers.py  test_fasta_files_are_identical.py
src/pylign/: __main__.py  functions_based_on_sam_2_fasta.py  helpers.py  pyligner.py  test_fasta_files_are_identical.py
