[metadata]
name = pylign
version = 0.0.1
author = Theo Sanderson
author_email = theo@theo.io
description = Lineage prediction from SARS-CoV-2 sequences
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theosanderson/pylign
project_urls =
    Bug Tracker = https://github.com/theosanderson/pylign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mappy==2.22

[options.package_data]
* = src/trained_model/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pylign = pylign:__main__.main