[metadata]
name = flowalign
version = 0.0.1
author = Theo Sanderson
author_email = theo@theo.io
description = Alignment generator using mappy and Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theosanderson/flowalign
project_urls =
    Bug Tracker = https://github.com/theosanderson/flowalign/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    mappy==2.22
    tqdm

[options.package_data]
* = src/trained_model/*

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    flowalign = flowalign:__main__.main
